Fixed wrong logo path and footer alignment error

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -29,13 +29,13 @@
   .footbar li.rights{
     /* border: 2px solid green; */
     position: relative;
-    left: 765px;
+    left: 700px;
     font-size: 25px;
   }
   .footbar li.Copyright{
     /* border: 2px solid green; */
     position: relative;
-    left: 694px;
+    left: 600px;
   }
   .footbar li.name{
     /* border: 2px solid green; */
